# QTModuleDemo

./: CMakeLists.txt  OldClass.cpp  OldClass.h  README.md  main.cpp  main_window.cpp  main_window.h  main_window.ixx  main_window.ui  module1.cppm  module2.cpp  module2.ixx  page_first.cpp  page_first.h  page_first.ixx  page_first.ui
module3/: CMakeLists.txt  module3.cpp  module3.ixx
page_second/: CMakeLists.txt  module_define.h  page_second.cpp  page_second.ixx  page_second.ui
